--- a/templates/admin-reservations-calendar.page.tmpl
+++ b/templates/admin-reservations-calendar.page.tmpl
@@ -8,6 +8,9 @@
   {{$now := index .Data "now"}}
   {{$rooms := index .Data "rooms"}}
   {{$dim := index .IntMap "days_in_month"}}
+  {{$curMonth := index .StringMap "this_month"}}
+  {{$curYear := index .StringMap "this_month_Year"}}
+
   <div class="col-md-12">
 
     <div class="text-center">
